crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__aggregates_tuple_literal_and_access.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: tuple_literal_and_access.cm
============================================================
Source code:
// Tests tuple creation, indexed write, and indexed read.
fn test_tuple() -> felt {
    let t = (100, 200, 300);
    t[1] = 250;
    return t[1];
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_tuple {
    entry: 0

    0:
      // Allocate tuple with 3 elements
%0 = stackalloc 3
      // Get address of tuple element 0
%1 = getelementptr %0, 0
      store %1, 100
      // Get address of tuple element 1
%2 = getelementptr %0, 1
      store %2, 200
      // Get address of tuple element 2
%3 = getelementptr %0, 2
      store %3, 300
      // Get address of array element
%4 = getelementptr %0, 1
      store %4, 250
      // Get address of array element
%5 = getelementptr %0, 1
      %6 = load %5
      return %6

  }

}
