crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__control_flow_if_both_return.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: if_both_return.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 3 // entry, then, else. NO merge block.
//!ASSERT NOT_CONTAINS: jump 3 // Should not jump to a merge block.

// Tests an `if-else` where both branches terminate with a `return`.
// No merge block should be generated.
func test(x: felt) -> felt {
    if (x == 0) {
        return 1;
    } else {
        return 2;
    }
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      %1 = %0 Eq 0
      if %1 then jump 1 else jump 2

    1:
      return 1

    2:
      return 2

  }

}
