crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__control_flow_if_else.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: if_else.cm
============================================================
Source code:
//!ASSERT BLOCK_COUNT(test): 4 // entry, then, else, merge

// Tests a standard `if-else` statement where both branches continue execution.
func test(x: felt) -> felt {
    let a = 0;
    if (x == 10) {
        a = 1;
    } else {
        a = 2;
    }
    return a;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test {
    parameters: [0]
    entry: 0

    0:
      %1 = stackalloc 1
      store %1, 0
      %2 = %0 Eq 10
      if %2 then jump 1 else jump 2

    1:
      store %1, 1
      jump 3

    2:
      store %1, 2
      jump 3

    3:
      return %1

  }

}
