crates/compiler/mir/src/ir_generation/tests/snapshots/cairo_m_compiler_mir__ir_generation__tests__mir_generation_tests__control_flow_loop_with_breaks.snap
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: snapshot_content
---
---
source: crates/compiler/mir/src/ir_generation/tests/mir_generation_tests.rs
expression: mir_output
---
Fixture: loop_with_breaks.cm
============================================================
Source code:
func test_loop_with_breaks() -> felt {
    let count = 0;
    let result = 0;

    loop {
        count = count + 1;

        if (count == 5) {
            continue;
        }

        result = result + count;

        if (count == 10) {
            break;
        }
    }

    return result;
}

============================================================
Generated MIR:
module {
  // Function 0
  fn test_loop_with_breaks {
    entry: 0

    0:
      %0 = stackalloc 1
      store %0, 0
      %1 = stackalloc 1
      store %1, 0
      jump 1

    1:
      %2 = %0 Add 1
      store %0, %2
      if %0 Eq 5 then jump 3 else jump 4

    2:
      return %1

    3:
      jump 1

    4:
      %4 = %1 Add %0
      store %1, %4
      if %0 Eq 10 then jump 5 else jump 6

    5:
      jump 2

    6:
      jump 1

  }

}
